- Mobile debugging (overflow issues)

--- a/css/style.css
+++ b/css/style.css
@@ -131,7 +131,6 @@ html {
 
 #heroshot{
   position: relative;
-  outline: red 2px dotted;
   width: 100%;
   height: 100vh;
   margin: 0 !important;
@@ -145,7 +144,6 @@ html {
   transform: translateX(-50%);
   width: 80%;
   height: 100vh;
-  outline: purple 2px dotted;
   margin: 0 !important;
   border: 0 !important;
   padding: 0 !important;
@@ -880,9 +878,7 @@ body {
   color: #888888;
   font-size: 16px;
 }
-*{
-  outline: red 1px dotted !important;
-}
+
 
 
 
@@ -905,11 +901,8 @@ body {
   }
   #border{
     width: 80%;
-    left: 45vw;
+    left: 43vw;
 
-  }
-  *{
-    outline: red 1px dotted !important;
   }
   #runningWritingHeadClose{
     margin-left: 3vw;
@@ -924,7 +917,7 @@ body {
     top: 11vh;
   }
   #runningWritingH1Close{
-    left: 65vw;
+    left: 55vw;
     top: 14vh;
   }
   #runningWritingPOpen{
@@ -938,8 +931,8 @@ body {
 
   #paraOne{
     margin-left: 10vw;
-    font-size: 1rem;
-    width: 95%;
+    font-size: 0.9rem;
+    width: 84%;
     top: 16vh;
   }
   #scrollDown{
@@ -947,7 +940,10 @@ body {
     top: 8vh;
   }
   #header1, #header2, #header3, .red, #danielText{
-    font-size: 4rem;
+    font-size: 3rem;
+  }
+  #header2{
+    width: 63vw !important;
   }
   .red {
     text-shadow: -5px 0 0 #00dfd8; /* Blue-ish shadow effect to the left */
@@ -1012,14 +1008,16 @@ body {
     width: 6vw;
   }
 
-
-  #aboutSection, #aboutSectionContainer{
+  #aboutSection{
+    width: 80%;
+    left: 50%;
     height: 100vh;
   }
-  #aboutSection{
-    width: 80vw;
-    left: 61.25vw;
+  #aboutSectionContainer{
+    width: 99%;
+    height: 100vh;
   }
+
   #aboutMeHeading, #mySkillsHeading{
     width: 50%;
   }
@@ -1029,12 +1027,12 @@ body {
     position: absolute;
     top: 0;
     font-size: 2rem;
-
   }
   #mySkillsHeading{
     left: 50%;
     position: absolute;
     top: 0;
+    width: 50%;
     font-size: 2rem;
   }
 
@@ -1045,22 +1043,22 @@ body {
   }
 
   #textBoxAbout{
-    left: -5%;
+    left: 0;
     margin-left: 0 !important;
     position: absolute;
     top: 10vh;
-    width: 60% !important;
+    width: 50% !important;
     font-size: 0.75rem;
     text-align: center;
     padding-top: 50px !important;
-    padding-right: 15px !important;
+    padding-right: 0 !important;
   }
   #textBoxMySkills{
-    left: 32vw;
+    left: 40%;
     position: absolute;
     top: 10vh;
     padding-top: 50px !important;
-    padding-left: 15px !important;
+    padding-left: 0 !important;
   }
   #skillHTML, #skillCSS, #skillJS, #skillPython, #skillGithub, #skillBasicSQL, #skillJava, #skillFigma, #skillWebScraping, #skillReCaptchaAutomation, #skillIFTTTWebhook {
     background-color: #d5d5d5;
